# cuda-neural-network

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.github/workflows/: cuda-build.yml
docs/: architecture.md  roadmap.md
include/: neural_net.h
scripts/: build.sh  run_docker.sh
src/: main.cpp  neural_net.cu
src/core/: neural_net.cu
tests/: test_forward.cpp
